--- a/src/components/menuItem/menuItem.scss
+++ b/src/components/menuItem/menuItem.scss
@@ -14,6 +14,7 @@
 
     & .background-image {
       scale: (1.1);
+      opacity: .9;
       transition: all 6s cubic-bezier(0.165, 0.84, 0.44, 1);
     }
   }
@@ -60,6 +61,14 @@
     .subtitle {
       font-weight: lighter;
       font-size: 16px;
+      text-decoration: none;
+      color: black;
+    }
+
+    .subtitle:hover {
+      scale: 1.2;
+      color: hotpink;
+      transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
     }
   }
 }
